fucked up message logic

--- a/client/views/messages.html
+++ b/client/views/messages.html
@@ -5,7 +5,7 @@
 			<li id="last"></li>
 			{{#if currentUser}}
 			<li id='li-message'>
-				<textarea id="mymessage" rows='1' placeholder='your message' tabindex='1'/>
+				<textarea id='mymessage' rows='1' placeholder='your message' tabindex='1' autofocus='autofocus'/>
 			</li>
 			{{/if}}
 		</ul>
