--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -63,14 +63,15 @@
 	</div>
 	<div class="todos">
 		<div class="todos-wrapper">
-			<h4>Things on the to-do list</h4>
+			<h4>TODO</h4>
+			<br>
 			<ul>
-				<li>Enhanced <a href="/profile">profile page</a></li>
+				<li><strike>Enhanced <a href="/profile">profile page</a></strike></li>
 				<li>Let users delete their messages</li>
 				<li><strike>Better <a href="#mdc-modal">Markdown</a> support</strike></li>
 				<li>Code highlighting?</li>
 				<li>Implement notification system logic</li>
-				<li>Tagging of chatrooms</li>
+				<li>Tagging of chatrooms *in progress*</li>
 			</ul>
 			<br>
 			Do you want to contribute or have a suggestion to make this better?	<a href="https://github.com/christian-fei/opentalk.me">Fork away!</a>
