--- a/client/views/markdownCheatsheet.html
+++ b/client/views/markdownCheatsheet.html
@@ -43,7 +43,7 @@
 				no syntax highlighting at the momemt, but will be integrated (soon?).
 				<br>
 				Do you have suggestions or want to contribute? <br>
-				That would be <a href="https://github.com/christian-fei/opentalk.me">awesome</a>
+				That would be <a href="https://github.com/christian-fei/opentalk.me/blob/master/client/js/markdown.js">dope</a>
 	        </div>
 	    </div>
 	    <a href="#!" class="modal-close" title="Close" data-close="Close"
