--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1013,8 +1013,53 @@ SUPER SLICK TRANSFORMS
 /* line 306, ../sass/_sidebar.scss */
 .tags .tag {
   display: inline-block;
-  padding: .2em .5em;
-  margin: .2em .5em;
+  padding: .3em .5em;
+  margin: .4em .3em;
+  cursor: pointer;
+  background: #ffbb00;
+  color: black;
+  border: 1px solid lightgrey;
+  position: relative;
+  border-radius: 5px;
+}
+/* line 317, ../sass/_sidebar.scss */
+.tags .tag:before {
+  content: "";
+  float: left;
+  position: absolute;
+  top: .15em;
+  left: -.5em;
+  width: 0;
+  height: 0;
+  border-color: transparent #ffbb00 transparent transparent;
+  border-style: solid;
+  border-width: 12px 12px 14px 0;
+}
+/* line 329, ../sass/_sidebar.scss */
+.tags .tag:after {
+  content: "";
+  position: absolute;
+  top: .8em;
+  left: 0;
+  float: left;
+  width: 4px;
+  height: 4px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  background: #fff;
+  -moz-box-shadow: -1px -1px 2px #004977;
+  -webkit-box-shadow: -1px -1px 2px #004977;
+  box-shadow: -1px -1px 2px #004977;
+}
+/* line 346, ../sass/_sidebar.scss */
+.tags .tag:hover {
+  background: #919191;
+  cursor: crosshair;
+}
+/* line 347, ../sass/_sidebar.scss */
+.tags .tag:hover:before {
+  border-color: transparent #919191 transparent transparent;
 }
 
 /* line 1, ../sass/_messages.scss */
