--- a/client/css/main.css
+++ b/client/css/main.css
@@ -502,7 +502,7 @@ SUPER SLICK TRANSFORMS
   color: #222;
   text-shadow: 0px 1px 3px rgba(255, 255, 255, 0.2), -1px -1px 1px rgba(0, 0, 0, 0.2);
 }
-@media all and (min-width: 32em) {
+@media all and (min-width: 31em) {
   /* line 16, ../sass/_welcome.scss */
   .welcome-mast-cont, .profile-mast-cont {
     -webkit-animation: welcome-mast-anim 14s infinite linear;
@@ -548,7 +548,7 @@ SUPER SLICK TRANSFORMS
 .blanket, .blanket-white {
   position: relative;
   display: table;
-  max-width: 32em;
+  max-width: 31em;
   padding: 1.5em;
   box-shadow: 3px 3px 25px lightgrey;
   margin: 4em auto 4em;
@@ -556,7 +556,7 @@ SUPER SLICK TRANSFORMS
   border: 1px solid lightgrey;
   background: url("/images/pattern-black-w.png");
 }
-@media all and (max-width: 32em) {
+@media all and (max-width: 31em) {
   /* line 69, ../sass/_welcome.scss */
   .blanket, .blanket-white {
     margin: 2.5em 1em;
@@ -665,19 +665,26 @@ SUPER SLICK TRANSFORMS
   border-top-right-radius: 0px;
   border-top-left-radius: 0px;
 }
-@media all and (max-width: 32em) {
+@media all and (min-width: 55em) {
+  /* line 1, ../sass/_room.scss */
+  .main, .footer .footer-wrapper {
+    max-width: 37em;
+    border-left: 6em solid transparent;
+  }
+}
+@media all and (max-width: 31em) {
   /* line 1, ../sass/_room.scss */
   .main, .footer .footer-wrapper {
     width: 93%;
     margin-right: .5em;
   }
 }
-/* line 27, ../sass/_room.scss */
+/* line 35, ../sass/_room.scss */
 .main.under-modal, .footer .under-modal.footer-wrapper {
   opacity: 0.3;
 }
 
-/* line 44, ../sass/_room.scss */
+/* line 52, ../sass/_room.scss */
 #nickname {
   position: relative;
   padding: 1em;
@@ -691,12 +698,12 @@ SUPER SLICK TRANSFORMS
   margin-top: -.3em;
 }
 
-/* line 63, ../sass/_room.scss */
+/* line 71, ../sass/_room.scss */
 .login-form {
   text-align: center;
 }
 
-/* line 69, ../sass/_room.scss */
+/* line 77, ../sass/_room.scss */
 .loading {
   display: block;
   width: 100%;
@@ -712,7 +719,7 @@ SUPER SLICK TRANSFORMS
   -o-transition: all 333ms linear;
   transition: all 333ms linear;
 }
-/* line 85, ../sass/_room.scss */
+/* line 93, ../sass/_room.scss */
 .loading.show-loading {
   height: auto;
   padding: 1em;
@@ -736,7 +743,7 @@ SUPER SLICK TRANSFORMS
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgba(255, 255, 255, 0)', endColorstr='rgba(255, 255, 255, 1)', GradientType=1);
 }
-@media all and (min-width: 62em) {
+@media all and (min-width: 56em) {
   /* line 1, ../sass/_sidebar.scss */
   .fixed-sidebar-background {
     border-top: 4px solid #ffbb00;
@@ -746,7 +753,7 @@ SUPER SLICK TRANSFORMS
 /* line 21, ../sass/_sidebar.scss */
 .fixed-sidebar {
   position: fixed;
-  width: 15em;
+  width: 17em;
   top: 0;
   bottom: 0;
   z-index: 99;
@@ -765,12 +772,13 @@ SUPER SLICK TRANSFORMS
 .fixed-sidebar a {
   color: black;
 }
-@media all and (max-width: 62em) {
+@media all and (max-width: 56em) {
   /* line 21, ../sass/_sidebar.scss */
   .fixed-sidebar {
     border-top: 4px solid #ffbb00;
-    left: -16em !important;
+    left: -18em !important;
     padding: 5em 2em 4em;
+    background: url("/images/pattern-black-w.png");
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -ms-transition: all 0.2s ease-in-out;
@@ -783,57 +791,51 @@ SUPER SLICK TRANSFORMS
     transition-property: transform,opacity;
   }
 }
-/* line 64, ../sass/_sidebar.scss */
+/* line 65, ../sass/_sidebar.scss */
 .fixed-sidebar.show {
   z-index: 900;
   opacity: 1;
   box-shadow: none;
 }
-@media all and (max-width: 62em) {
-  /* line 21, ../sass/_sidebar.scss */
-  .fixed-sidebar {
-    background: url("/images/pattern-black-w.png");
-  }
-}
-/* line 79, ../sass/_sidebar.scss */
+/* line 77, ../sass/_sidebar.scss */
 .fixed-sidebar:hover {
   opacity: 1;
 }
-/* line 81, ../sass/_sidebar.scss */
+/* line 79, ../sass/_sidebar.scss */
 .fixed-sidebar:hover .online-users-count {
   opacity: 1 !important;
 }
 
-@media all and (max-width: 62em) {
-  /* line 88, ../sass/_sidebar.scss */
+@media all and (max-width: 56em) {
+  /* line 86, ../sass/_sidebar.scss */
   .csstransforms .fixed-sidebar.show {
-    -webkit-transform: translate3d(16em, 0, 0);
-    -moz-transform: translate3d(16em, 0, 0);
-    -o-transform: translate3d(16em, 0, 0);
-    -ms-transform: translate3d(16em, 0, 0);
-    transform: translate3d(16em, 0, 0);
+    -webkit-transform: translate3d(18em, 0, 0);
+    -moz-transform: translate3d(18em, 0, 0);
+    -o-transform: translate3d(18em, 0, 0);
+    -ms-transform: translate3d(18em, 0, 0);
+    transform: translate3d(18em, 0, 0);
   }
 }
 
-@media all and (max-width: 62em) {
-  /* line 100, ../sass/_sidebar.scss */
+@media all and (max-width: 56em) {
+  /* line 98, ../sass/_sidebar.scss */
   .no-csstransforms .fixed-sidebar.show {
     left: 0 !important;
   }
 }
 
-/* line 106, ../sass/_sidebar.scss */
+/* line 104, ../sass/_sidebar.scss */
 .userinfo {
   text-align: center;
 }
-/* line 108, ../sass/_sidebar.scss */
+/* line 106, ../sass/_sidebar.scss */
 .userinfo .user-avatar {
   height: 3em;
   border: 1px solid black;
   border-radius: 50%;
   overflow: hidden;
 }
-/* line 115, ../sass/_sidebar.scss */
+/* line 113, ../sass/_sidebar.scss */
 .userinfo .user-username {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -841,12 +843,12 @@ SUPER SLICK TRANSFORMS
   display: block;
 }
 
-/* line 123, ../sass/_sidebar.scss */
+/* line 121, ../sass/_sidebar.scss */
 .buttons-wrapper {
   text-align: center;
 }
 
-/* line 126, ../sass/_sidebar.scss */
+/* line 124, ../sass/_sidebar.scss */
 #logout, #toggleRealtime, #userstats {
   margin-left: 0.5em;
   margin-right: 0.5em;
@@ -855,7 +857,7 @@ SUPER SLICK TRANSFORMS
   border: 1px solid darkgrey;
 }
 
-/* line 143, ../sass/_sidebar.scss */
+/* line 141, ../sass/_sidebar.scss */
 .online-users {
   margin: 2em auto;
   text-align: left;
@@ -864,17 +866,17 @@ SUPER SLICK TRANSFORMS
   overflow-y: auto;
   height: 10em;
 }
-/* line 151, ../sass/_sidebar.scss */
+/* line 149, ../sass/_sidebar.scss */
 .online-users li {
   margin-left: 0;
 }
 
-/* line 155, ../sass/_sidebar.scss */
+/* line 153, ../sass/_sidebar.scss */
 .online-users-heading {
   text-align: center;
 }
 
-/* line 158, ../sass/_sidebar.scss */
+/* line 156, ../sass/_sidebar.scss */
 .online-user {
   display: inline-block;
   text-overflow: ellipsis;
@@ -882,19 +884,19 @@ SUPER SLICK TRANSFORMS
   overflow: hidden;
   color: #444;
 }
-/* line 165, ../sass/_sidebar.scss */
+/* line 163, ../sass/_sidebar.scss */
 .online-user.strike {
   text-decoration: line-through;
   opacity: .3;
 }
 
-/* line 171, ../sass/_sidebar.scss */
+/* line 169, ../sass/_sidebar.scss */
 .online-user-wrapper {
   text-align: left;
   margin-left: 3em !important;
 }
 
-/* line 176, ../sass/_sidebar.scss */
+/* line 174, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -902,13 +904,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 182, ../sass/_sidebar.scss */
+/* line 180, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 187, ../sass/_sidebar.scss */
+/* line 185, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -933,8 +935,8 @@ SUPER SLICK TRANSFORMS
   transition: all .4s ease-in-out;
   */
 }
-@media all and (max-width: 62em) {
-  /* line 187, ../sass/_sidebar.scss */
+@media all and (max-width: 56em) {
+  /* line 185, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -943,7 +945,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 228, ../sass/_sidebar.scss */
+/* line 226, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -959,21 +961,21 @@ SUPER SLICK TRANSFORMS
   border-bottom-left-radius: 0px;
   border: 0.1em solid #cc9600;
 }
-@media all and (max-width: 62em) {
-  /* line 228, ../sass/_sidebar.scss */
+@media all and (max-width: 56em) {
+  /* line 226, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 253, ../sass/_sidebar.scss */
+/* line 251, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 262, ../sass/_sidebar.scss */
+/* line 260, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -982,23 +984,23 @@ SUPER SLICK TRANSFORMS
   border-radius: 70%;
   opacity: .5;
 }
-/* line 273, ../sass/_sidebar.scss */
+/* line 271, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 276, ../sass/_sidebar.scss */
+/* line 274, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 284, ../sass/_sidebar.scss */
+/* line 282, ../sass/_sidebar.scss */
 .fixed-sidebar .logo {
   position: absolute;
   top: 1.5em;
   right: 1em;
 }
 
-/* line 293, ../sass/_sidebar.scss */
+/* line 291, ../sass/_sidebar.scss */
 .markdown-cheatsheet {
   margin: 5em 0;
   padding: 2em 0;
@@ -1006,11 +1008,11 @@ SUPER SLICK TRANSFORMS
   text-align: center;
 }
 
-/* line 303, ../sass/_sidebar.scss */
+/* line 301, ../sass/_sidebar.scss */
 .tags {
   list-style-type: none;
 }
-/* line 306, ../sass/_sidebar.scss */
+/* line 304, ../sass/_sidebar.scss */
 .tags .tag {
   display: inline-block;
   padding: .3em .5em;
@@ -1022,7 +1024,7 @@ SUPER SLICK TRANSFORMS
   position: relative;
   border-radius: 5px;
 }
-/* line 317, ../sass/_sidebar.scss */
+/* line 315, ../sass/_sidebar.scss */
 .tags .tag:before {
   content: "";
   float: left;
@@ -1035,7 +1037,7 @@ SUPER SLICK TRANSFORMS
   border-style: solid;
   border-width: 12px 12px 14px 0;
 }
-/* line 329, ../sass/_sidebar.scss */
+/* line 327, ../sass/_sidebar.scss */
 .tags .tag:after {
   content: "";
   position: absolute;
@@ -1052,12 +1054,12 @@ SUPER SLICK TRANSFORMS
   -webkit-box-shadow: -1px -1px 2px #004977;
   box-shadow: -1px -1px 2px #004977;
 }
-/* line 346, ../sass/_sidebar.scss */
+/* line 344, ../sass/_sidebar.scss */
 .tags .tag:hover {
   background: #919191;
   cursor: crosshair;
 }
-/* line 347, ../sass/_sidebar.scss */
+/* line 345, ../sass/_sidebar.scss */
 .tags .tag:hover:before {
   border-color: transparent #919191 transparent transparent;
 }
@@ -1065,7 +1067,7 @@ SUPER SLICK TRANSFORMS
 /* line 1, ../sass/_messages.scss */
 .messages {
   list-style-type: none;
-  max-width: 31em;
+  width: 100%;
   border-radius: .5em;
 }
 
@@ -1187,7 +1189,7 @@ code {
 }
 /* line 134, ../sass/_messages.scss */
 .message-image.exp {
-  max-width: 32em;
+  max-width: 31em;
   max-height: inherit;
   width: 100%;
 }
@@ -1678,7 +1680,7 @@ http://www.tipue.com/tipr
 /* line 47, ../sass/_profile.scss */
 .user-rooms {
   margin: 2em auto;
-  max-width: 32em;
+  max-width: 31em;
   width: 100%;
   overflow: hidden;
   padding: 1.5em;
@@ -1716,7 +1718,7 @@ http://www.tipue.com/tipr
 
 /* line 11, ../sass/_tiles.scss */
 .tiles-wrapper, .features-wrapper, .stats-wrapper {
-  max-width: 42em;
+  max-width: 41em;
   margin: auto;
 }
 
@@ -1732,7 +1734,7 @@ http://www.tipue.com/tipr
   text-align: center;
   height: 15em;
 }
-@media all and (max-width: 42em) {
+@media all and (max-width: 41em) {
   /* line 15, ../sass/_tiles.scss */
   .tile, .feature, .stat {
     width: 50%;
@@ -2038,6 +2040,6 @@ html {
 /* line 6, ../sass/_todo.scss */
 .todos-wrapper {
   margin: 5em auto;
-  max-width: 32em;
+  max-width: 31em;
   padding: 2em;
 }
