--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -1,7 +1,7 @@
 .messages{
 	list-style-type: none;
 	//padding: 0.5em 0em 0em;
-	max-width: $limit - 1em;
+	width: 100%;
 
 	// background: rgba(255,255,255,.6);
 	// box-shadow: 3px 3px 25px $color-border;
