--- a/client/sass/_room.scss
+++ b/client/sass/_room.scss
@@ -2,7 +2,15 @@
 	z-index: 126;
 
 	margin: 6em auto 0.5em;
-	max-width: $limit - 1em;
+	
+	max-width: $limit;
+
+	@media all and (min-width: $limit + $offset-main + $sidebar-width + 1em){
+		max-width: $limit + $offset-main;
+
+		border-left: $offset-main solid transparent;
+	}
+
 	//width:100%;
 	
 	padding: .66em;
