--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -303,7 +303,7 @@
 	
 	.tag{
 		display: inline-block;
-		padding: .3em .5em;
+		padding: .2em .5em;
 		margin:  .4em .3em;
 		cursor:  pointer;
 		background: $color-main;
@@ -316,18 +316,18 @@
 		content:"";
 		float:left;
 		position:absolute;
-		top:.15em;
-		left:-.5em;
+		top:.17em;
+		left:-.6em;
 		width:0;
 		height:0;
 		border-color:transparent $color-main transparent transparent;
 		border-style:solid;
-		border-width:12px 12px 14px 0;		
+		border-width:.7em .7em .7em 0;		
 		}	
 	.tag:after{
 		content:"";
 		position:absolute;
-		top:.8em;
+		top:.75em;
 		left:0;
 		float:left;
 		width:4px;
