--- a/client/views/room.html
+++ b/client/views/room.html
@@ -42,12 +42,13 @@
 		{{/isolate}}
 		{{#isolate}}
 			<ul class="tags">
+				<li><h6>tags</h6></li>
 				{{#each roomTags}}
 					<li class="tag">{{this}}</li>
 				{{/each}}
 				{{#if gimmeMoreTags}}
 					<li>
-						<input type="text" id="enter-tag"/>
+						<input type="text" id="enter-tag" placeholder='enter tag'/>
 					</li>
 				{{/if}}
 			</ul>
