--- a/client/views/markdownCheatsheet.html
+++ b/client/views/markdownCheatsheet.html
@@ -6,7 +6,7 @@
 	        </header>
 	        <div class="modal-content">
 				<b>OpenTalk</b> supports your nerdy needs. <br/>
-				Basic Markdown parsing (in the <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Github fashion</a>), like: <br/>
+				Basic Markdown parsing (in the <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet" target='_blank'>Github fashion</a>), like: <br/>
 
 				<h4>Headings</h4>
 				# H1<br/>
