--- a/client/css/main.css
+++ b/client/css/main.css
@@ -545,7 +545,7 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 69, ../sass/_welcome.scss */
-.blanket, .blanket-white {
+.blanket, .blanket-white, .blanket-search {
   position: relative;
   display: table;
   max-width: 31em;
@@ -558,83 +558,83 @@ SUPER SLICK TRANSFORMS
 }
 @media all and (max-width: 31em) {
   /* line 69, ../sass/_welcome.scss */
-  .blanket, .blanket-white {
+  .blanket, .blanket-white, .blanket-search {
     margin: 2.5em 1em;
   }
 }
 
-/* line 89, ../sass/_welcome.scss */
+/* line 92, ../sass/_welcome.scss */
 .medium-text {
   font-size: 1.3em;
 }
 
-/* line 92, ../sass/_welcome.scss */
+/* line 95, ../sass/_welcome.scss */
 .vam {
   vertical-align: middle;
   display: table-cell;
 }
 
 @-webkit-keyframes welcome-mast-anim {
-  /* line 99, ../sass/_welcome.scss */
+  /* line 102, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 100, ../sass/_welcome.scss */
+  /* line 103, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @-moz-keyframes welcome-mast-anim {
-  /* line 103, ../sass/_welcome.scss */
+  /* line 106, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 104, ../sass/_welcome.scss */
+  /* line 107, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @-ms-keyframes welcome-mast-anim {
-  /* line 107, ../sass/_welcome.scss */
+  /* line 110, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 108, ../sass/_welcome.scss */
+  /* line 111, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @-o-keyframes welcome-mast-anim {
-  /* line 111, ../sass/_welcome.scss */
+  /* line 114, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 112, ../sass/_welcome.scss */
+  /* line 115, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @keyframes welcome-mast-anim {
-  /* line 115, ../sass/_welcome.scss */
+  /* line 118, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 116, ../sass/_welcome.scss */
+  /* line 119, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
-/* line 133, ../sass/_welcome.scss */
+/* line 136, ../sass/_welcome.scss */
 .footer {
   background: white;
   overflow: hidden;
@@ -643,12 +643,12 @@ SUPER SLICK TRANSFORMS
   color: #666;
   text-align: center;
 }
-/* line 140, ../sass/_welcome.scss */
+/* line 143, ../sass/_welcome.scss */
 .footer .footer-wrapper {
   margin-top: 0 !important;
 }
 
-/* line 145, ../sass/_welcome.scss */
+/* line 148, ../sass/_welcome.scss */
 .tos {
   text-align: left;
   margin: 4em auto;
@@ -742,6 +742,7 @@ SUPER SLICK TRANSFORMS
   background: linear-gradient(left, #ffffff, rgba(255, 255, 255, 0));
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgba(255, 255, 255, 1)', endColorstr='rgba(255, 255, 255, 0)', GradientType=1);
+  background: white;
 }
 @media all and (min-width: 56em) {
   /* line 1, ../sass/_sidebar.scss */
@@ -750,7 +751,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 21, ../sass/_sidebar.scss */
+/* line 23, ../sass/_sidebar.scss */
 .fixed-sidebar {
   position: fixed;
   width: 17em;
@@ -764,12 +765,12 @@ SUPER SLICK TRANSFORMS
   /*prevent flicker*/
   box-shadow: -0.3em 0 .4em lightgrey inset;
 }
-/* line 36, ../sass/_sidebar.scss */
+/* line 38, ../sass/_sidebar.scss */
 .fixed-sidebar a {
   color: black;
 }
 @media all and (max-width: 56em) {
-  /* line 21, ../sass/_sidebar.scss */
+  /* line 23, ../sass/_sidebar.scss */
   .fixed-sidebar {
     border-top: 4px solid #ffbb00;
     left: -18em !important;
@@ -788,23 +789,23 @@ SUPER SLICK TRANSFORMS
     transition-property: transform,opacity;
   }
 }
-/* line 66, ../sass/_sidebar.scss */
+/* line 68, ../sass/_sidebar.scss */
 .fixed-sidebar.show {
   z-index: 900;
   opacity: 1;
   box-shadow: none;
 }
-/* line 78, ../sass/_sidebar.scss */
+/* line 80, ../sass/_sidebar.scss */
 .fixed-sidebar:hover {
   opacity: 1;
 }
-/* line 80, ../sass/_sidebar.scss */
+/* line 82, ../sass/_sidebar.scss */
 .fixed-sidebar:hover .online-users-count {
   opacity: 1 !important;
 }
 
 @media all and (max-width: 56em) {
-  /* line 87, ../sass/_sidebar.scss */
+  /* line 89, ../sass/_sidebar.scss */
   .csstransforms .fixed-sidebar.show {
     -webkit-transform: translate3d(18em, 0, 0);
     -moz-transform: translate3d(18em, 0, 0);
@@ -815,24 +816,24 @@ SUPER SLICK TRANSFORMS
 }
 
 @media all and (max-width: 56em) {
-  /* line 99, ../sass/_sidebar.scss */
+  /* line 101, ../sass/_sidebar.scss */
   .no-csstransforms .fixed-sidebar.show {
     left: 0 !important;
   }
 }
 
-/* line 105, ../sass/_sidebar.scss */
+/* line 107, ../sass/_sidebar.scss */
 .userinfo {
   text-align: center;
 }
-/* line 107, ../sass/_sidebar.scss */
+/* line 109, ../sass/_sidebar.scss */
 .userinfo .user-avatar {
   height: 3em;
   border: 1px solid black;
   border-radius: 50%;
   overflow: hidden;
 }
-/* line 114, ../sass/_sidebar.scss */
+/* line 116, ../sass/_sidebar.scss */
 .userinfo .user-username {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -840,12 +841,12 @@ SUPER SLICK TRANSFORMS
   display: block;
 }
 
-/* line 122, ../sass/_sidebar.scss */
+/* line 124, ../sass/_sidebar.scss */
 .buttons-wrapper {
   text-align: center;
 }
 
-/* line 125, ../sass/_sidebar.scss */
+/* line 127, ../sass/_sidebar.scss */
 #logout, #toggleRealtime, #userstats {
   margin-left: 0.5em;
   margin-right: 0.5em;
@@ -854,7 +855,7 @@ SUPER SLICK TRANSFORMS
   border: 1px solid darkgrey;
 }
 
-/* line 142, ../sass/_sidebar.scss */
+/* line 144, ../sass/_sidebar.scss */
 .online-users {
   margin: 2em auto;
   text-align: left;
@@ -863,18 +864,18 @@ SUPER SLICK TRANSFORMS
   overflow-y: auto;
   height: 10em;
 }
-/* line 150, ../sass/_sidebar.scss */
+/* line 152, ../sass/_sidebar.scss */
 .online-users li {
   margin-left: 0;
 }
 
-/* line 154, ../sass/_sidebar.scss */
+/* line 156, ../sass/_sidebar.scss */
 .online-users-heading {
   text-align: center;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-/* line 158, ../sass/_sidebar.scss */
+/* line 160, ../sass/_sidebar.scss */
 .online-user {
   display: inline-block;
   text-overflow: ellipsis;
@@ -882,19 +883,19 @@ SUPER SLICK TRANSFORMS
   overflow: hidden;
   color: #555;
 }
-/* line 165, ../sass/_sidebar.scss */
+/* line 167, ../sass/_sidebar.scss */
 .online-user.strike {
   text-decoration: line-through;
   opacity: .3;
 }
 
-/* line 171, ../sass/_sidebar.scss */
+/* line 173, ../sass/_sidebar.scss */
 .online-user-wrapper {
   text-align: left;
   margin-left: 5em !important;
 }
 
-/* line 176, ../sass/_sidebar.scss */
+/* line 178, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -902,13 +903,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 182, ../sass/_sidebar.scss */
+/* line 184, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 187, ../sass/_sidebar.scss */
+/* line 189, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -934,7 +935,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 56em) {
-  /* line 187, ../sass/_sidebar.scss */
+  /* line 189, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -943,7 +944,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 228, ../sass/_sidebar.scss */
+/* line 230, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -960,20 +961,20 @@ SUPER SLICK TRANSFORMS
   border: 0.1em solid #cc9600;
 }
 @media all and (max-width: 56em) {
-  /* line 228, ../sass/_sidebar.scss */
+  /* line 230, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 253, ../sass/_sidebar.scss */
+/* line 255, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 262, ../sass/_sidebar.scss */
+/* line 264, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -982,23 +983,23 @@ SUPER SLICK TRANSFORMS
   border-radius: 70%;
   opacity: .5;
 }
-/* line 273, ../sass/_sidebar.scss */
+/* line 275, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 276, ../sass/_sidebar.scss */
+/* line 278, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 284, ../sass/_sidebar.scss */
+/* line 286, ../sass/_sidebar.scss */
 .fixed-sidebar .logo {
   position: absolute;
   top: 1.5em;
   right: 1em;
 }
 
-/* line 293, ../sass/_sidebar.scss */
+/* line 295, ../sass/_sidebar.scss */
 .markdown-cheatsheet {
   margin: 5em 0;
   padding: 2em 0;
@@ -1006,26 +1007,26 @@ SUPER SLICK TRANSFORMS
   text-align: center;
 }
 
-/* line 303, ../sass/_sidebar.scss */
+/* line 305, ../sass/_sidebar.scss */
 .tags {
   list-style-type: none;
   text-align: center;
 }
-/* line 307, ../sass/_sidebar.scss */
+/* line 309, ../sass/_sidebar.scss */
 .tags #enter-tag {
-  padding: .5em;
-  width: 6em;
+  padding: 1em 2em;
+  width: 10em;
   border: none;
   margin-top: .5em;
 }
-/* line 313, ../sass/_sidebar.scss */
+/* line 315, ../sass/_sidebar.scss */
 .tags #enter-tag:focus {
   border: none;
   outline: none;
 }
-/* line 318, ../sass/_sidebar.scss */
+/* line 320, ../sass/_sidebar.scss */
 .tags .tag {
-  padding: .3em .6em;
+  padding: .3em .7em;
   margin: .4em .16em;
   background: white;
   border-radius: 7px;
@@ -1033,7 +1034,7 @@ SUPER SLICK TRANSFORMS
   display: inline-block;
   color: black;
 }
-/* line 327, ../sass/_sidebar.scss */
+/* line 329, ../sass/_sidebar.scss */
 .tags .tag:hover {
   cursor: crosshair;
 }
