--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -14,6 +14,9 @@
 	<div class="blanket medium-text">
 		<span class='vam'>Join the conversation at</span> <span class="vam">{{>selectChatRoom}}</span>
 	</div>
+	<div class="blanket-search ">
+		<span class='vam'>or search for interesting chatrooms</span> <span class="vam">{{>search}}</span>
+	</div>
 	<div class="features">
 		<div class="features-wrapper">
 			<h1 class='features-header'>Features</h1>
