--- a/client/sass/_vars.scss
+++ b/client/sass/_vars.scss
@@ -5,6 +5,8 @@ $sidebar-width:17em;
 
 $offset-main:6em;
 
+$blanket-width:22em;
+
 $mobile-view: $limit + $sidebar-width + $offset-main + 2em;
 
 $color-main:lighten(#2980b9,10%);
