--- a/client/css/main.css
+++ b/client/css/main.css
@@ -544,97 +544,67 @@ SUPER SLICK TRANSFORMS
   margin-top: -.3em;
 }
 
-/* line 69, ../sass/_welcome.scss */
-.blanket, .blanket-white, .blanket-search {
-  position: relative;
-  display: table;
-  max-width: 31em;
-  padding: 1.5em;
-  box-shadow: 3px 3px 25px lightgrey;
-  margin: 4em auto 4em;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  background: url("/images/pattern-black-w.png");
-}
-@media all and (max-width: 31em) {
-  /* line 69, ../sass/_welcome.scss */
-  .blanket, .blanket-white, .blanket-search {
-    margin: 2.5em 1em;
-  }
-}
-
-/* line 92, ../sass/_welcome.scss */
-.medium-text {
-  font-size: 1.3em;
-}
-
-/* line 95, ../sass/_welcome.scss */
-.vam {
-  vertical-align: middle;
-  display: table-cell;
-}
-
 @-webkit-keyframes welcome-mast-anim {
-  /* line 102, ../sass/_welcome.scss */
+  /* line 72, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 103, ../sass/_welcome.scss */
+  /* line 73, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @-moz-keyframes welcome-mast-anim {
-  /* line 106, ../sass/_welcome.scss */
+  /* line 76, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 107, ../sass/_welcome.scss */
+  /* line 77, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @-ms-keyframes welcome-mast-anim {
-  /* line 110, ../sass/_welcome.scss */
+  /* line 80, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 111, ../sass/_welcome.scss */
+  /* line 81, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @-o-keyframes welcome-mast-anim {
-  /* line 114, ../sass/_welcome.scss */
+  /* line 84, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 115, ../sass/_welcome.scss */
+  /* line 85, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
 @keyframes welcome-mast-anim {
-  /* line 118, ../sass/_welcome.scss */
+  /* line 88, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 119, ../sass/_welcome.scss */
+  /* line 89, ../sass/_welcome.scss */
   to {
     background-position: 0 -400px;
   }
 }
 
-/* line 136, ../sass/_welcome.scss */
+/* line 106, ../sass/_welcome.scss */
 .footer {
   background: white;
   overflow: hidden;
@@ -643,12 +613,12 @@ SUPER SLICK TRANSFORMS
   color: #666;
   text-align: center;
 }
-/* line 143, ../sass/_welcome.scss */
+/* line 113, ../sass/_welcome.scss */
 .footer .footer-wrapper {
   margin-top: 0 !important;
 }
 
-/* line 148, ../sass/_welcome.scss */
+/* line 118, ../sass/_welcome.scss */
 .tos {
   text-align: left;
   margin: 4em auto;
@@ -2034,17 +2004,78 @@ html {
   display: inline-block;
   color: black;
 }
+/* line 13, ../sass/_search.scss */
+.tag-search-results li a {
+  text-decoration: none;
+}
 
-/* line 16, ../sass/_search.scss */
+/* line 19, ../sass/_search.scss */
 #search-tags {
   position: relative;
-  padding: 1em;
+  padding: 1em 1.5em 1em 0;
   text-align: center;
-  width: 8em;
+  width: 10em;
   outline: none;
   border: 0px;
   box-shadow: none;
   font-size: 1.1rem;
   font-family: 'Questrial', sans-serif;
   margin-top: -.3em;
+}
+
+/* line 1, ../sass/_blanket.scss */
+.blanket, .blanket-white, .blanket-search {
+  position: relative;
+  display: block;
+  max-width: 22em;
+  width: 93%;
+  padding: 1.5em;
+  box-shadow: 3px 3px 25px lightgrey;
+  margin: 2.5em auto;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  background: url("/images/pattern-black-w.png");
+}
+@media all and (min-width: 54em) {
+  /* line 1, ../sass/_blanket.scss */
+  .blanket, .blanket-white, .blanket-search {
+    display: inline-block;
+  }
+}
+
+/* line 25, ../sass/_blanket.scss */
+.medium-text {
+  font-size: 1.3em;
+}
+
+/* line 28, ../sass/_blanket.scss */
+.vam {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+/* line 34, ../sass/_blanket.scss */
+.blankets-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 54em;
+  overflow: hidden;
+  vertical-align: middle;
+}
+
+/* line 42, ../sass/_blanket.scss */
+.blanket-wrapper {
+  margin: auto;
+}
+@media all and (min-width: 54em) {
+  /* line 42, ../sass/_blanket.scss */
+  .blanket-wrapper {
+    width: 49%;
+    padding: 1em;
+    display: inline-block;
+    /* IE 7 hack, but who cares, right?? */
+    *zoom: 1;
+    *display: inline;
+    vertical-align: middle;
+  }
 }
